header-about section Done

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
         <h2 class="nav-title">
           Sayedul <span class="text-primary">H</span>oque
@@ -22,11 +22,105 @@
         <ul>
           <li>Portfolio</li>
           <li>Blogs</li>
-          <li><button>Hire Me</button></li>
+          <li><button class="btn-primary">Hire Me</button></li>
         </ul>
       </nav>
+      <div class="banner">
+        <div class="banner-info">
+          <h3>Hi, I am</h3>
+          <h1>Sayedul Hoque</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
+            facere voluptate distinctio iusto, dolor nobis quae esse
+            voluptatibus? Adipisci eos distinctio repudiandae ex voluptas,
+            corporis rem voluptatum tempore vel deleniti.
+          </p>
+          <button class="btn-primary">Downlode CV</button>
+        </div>
+        <img src="assets/images/hardy.png" alt="" />
+      </div>
     </header>
-    <main></main>
+    <main>
+      <section class="about-section">
+        <h3 class="section-title">About Me</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero quae,
+          itaque quia voluptatem esse accusamus nesciunt deserunt sapiente enim
+          temporibus, suscipit obcaecati molestias magni ipsa quis earum
+          molestiae. Rem soluta, reprehenderit animi doloremque aperiam tempore
+          recusandae quasi deserunt atque. Rerum, enim labore. Quia, repellat
+          consequuntur
+        </p>
+        <div class="about-info">
+          <div class="info-item">
+            <h3>Name:</h3>
+            <p>Sayedul Hoque</p>
+          </div>
+          <div class="info-item">
+            <h3>Email:</h3>
+            <p>SayedulHoque3544@gmail.com</p>
+          </div>
+          <div class="info-item">
+            <h3>Date of Birth</h3>
+            <p>1 January 2000</p>
+          </div>
+          <div class="info-item">
+            <h3>From</h3>
+            <p>Bangladesh,Feni</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="skill-section">
+        <h3 class="section-title">About Me</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero quae,
+          itaque quia voluptatem esse accusamus nesciunt deserunt sapiente enim
+          temporibus, suscipit obcaecati molestias magni ipsa quis earum
+          molestiae. Rem soluta, reprehenderit animi doloremque aperiam tempore
+          recusandae quasi deserunt atque. Rerum, enim labore. Quia, repellat
+          consequuntur
+        </p>
+        <div class="skill-box">
+          <div class="skill-item">
+            <img src="assets/images/icons/js.png" alt="" />
+            <h3>Vanilla JavaScript</h3>
+            <p>
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill-item">
+            <img src="assets/images/icons/react.png" alt="" />
+            <h3>React</h3>
+            <p>
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill-item">
+            <img src="assets/images/icons/nodejs.png" alt="" />
+            <h3>Node.js</h3>
+            <p>
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill-item">
+            <img src="assets/images/icons/mongo.png" alt="" />
+            <h3>MongoDB</h3>
+            <p>
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <footer></footer>
   </body>
