--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </section>
 
       <section class="skill-section">
-        <h3 class="section-title">About Me</h3>
+        <h3 class="section-title">My Skils</h3>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero quae,
           itaque quia voluptatem esse accusamus nesciunt deserunt sapiente enim
@@ -120,8 +120,105 @@
           </div>
         </div>
       </section>
+
+      <section class="resume-section">
+        <h3 class="section-title">About Me</h3>
+        <div class="resume-boxes">
+          <div class="resume-box">
+            <h2>My Education</h2>
+            <div class="box-item">
+              <h4>Master in Computer Engineering</h4>
+              <span>Harvard University / 2015 - 2017</span>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div class="box-item">
+              <h4>Master in Computer Engineering</h4>
+              <span>Harvard University / 2015 - 2017</span>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div class="box-item">
+              <h4>Master in Computer Engineering</h4>
+              <span>Harvard University / 2015 - 2017</span>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+          <div class="resume-box">
+            <h2>My Experience</h2>
+            <div class="box-item">
+              <h4>Sr. Font End Developer</h4>
+              <span>Apple Inc / 2020 - Current</span>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div class="box-item">
+              <h4>Master in Computer Engineering</h4>
+              <span>Harvard University / 2015 - 2017</span>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div class="box-item">
+              <h4>Master in Computer Engineering</h4>
+              <span>Harvard University / 2015 - 2017</span>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="align-btn">
+          <button class="btn-primary">Downlode CV</button>
+        </div>
+      </section>
     </main>
 
-    <footer></footer>
+    <footer class="footer">
+      <div class="footer-item">
+        <h3 class="section-title">Lets Connect</h3>
+        <p>
+          Please fill out the form on this section to contact with me or call
+          between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+        </p>
+        <div class="icon-box">
+          <img src="assets/images/icons/facebook.png" alt="fb" />
+          <img src="assets/images/icons/twitter.png" alt="twit" />
+          <img src="assets/images/icons/insta.png" alt="insta" />
+        </div>
+      </div>
+      <div class="footer-item">
+        <h3 class="section-title">Let’s Message me</h3>
+        <form>
+          <input class="input" type="text" placeholder="Your Name" />
+          <input class="input" type="email" placeholder="Your Email" />
+          <textarea
+            class="input"
+            name=""
+            id=""
+            cols="30"
+            rows="10"
+            placeholder="Message"
+          ></textarea>
+        </form>
+      </div>
+    </footer>
   </body>
 </html>
