--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
             rows="10"
             placeholder="Message"
           ></textarea>
+          <button class="btn-primary">Downlode CV</button>
         </form>
       </div>
     </footer>
